--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
-  "name": "my-virtual-doctor",
-  "version": "0.1.0",
-  "private": true,
+  "main": "lib/index.js",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
     "start": "next start",
+    "build": "next build",
+    "build:watch": "tsc --watch",
+    "dev": "next dev",
     "lint": "next lint"
   },
+  "name": "virtual-doctor",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
     "@auth/prisma-adapter": "^2.2.0",
+    "@genkit-ai/ai": "^0.5.3",
+    "@genkit-ai/core": "^0.5.3",
+    "@genkit-ai/dotprompt": "^0.5.3",
+    "@genkit-ai/flow": "^0.5.3",
+    "@genkit-ai/googleai": "^0.5.3",
     "@hookform/resolvers": "^3.6.0",
     "@neondatabase/serverless": "^0.9.3",
     "@prisma/adapter-neon": "^5.15.0",
@@ -27,6 +34,7 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "express": "^4.19.2",
     "lucide-react": "^0.390.0",
     "next": "14.2.3",
     "next-auth": "beta",
@@ -50,6 +58,6 @@
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5.4.5"
   }
 }
